# orkg-simcomp-api

./: .env.example  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  how-to-contribute.md  migration.md  openapi.json  pyproject.toml  pytest.ini  requirements.txt
.gitlab/ci/: check_merge
app/: __init__.py  app_factory.py  app_factory_utils.py  main.py
app/common/: errors.py
app/common/services/: base.py
app/common/util/: decorators.py  hashing.py  io.py
app/db/: connection.py  crud.py
app/db/models/: common.py  example.py  link.py  storage.py  thing.py
app/models/: common.py  contribution.py  example.py  review.py  shortener.py  storage.py  thing.py
app/routers/: contribution.py  example.py  shortener.py  storage.py  thing.py
app/services/: example.py
app/services/common/: base.py  es.py  orkg_backend.py
app/services/common/util/: text_preprocessing.py
app/services/contribution/: __init__.py  service.py
app/services/contribution/comparison/: __init__.py  _common.py  compare_merge.py  compare_path.py  service.py
app/services/contribution/similarity/: __init__.py  document.py  service.py
app/services/shortener/: __init__.py  service.py
app/services/storage/: __init__.py  service.py
app/services/thing/: __init__.py  service.py
app/services/thing/export/: __init__.py  comparison.py  review.py
tests/common/: assertion.py
tests/db/: mock_crud.py
tests/mock/: mock_base.py  mock_es.py  mock_orkg_backend.py
tests/routers/: test_contribution.py  test_example.py  test_shortener.py  test_storage.py  test_thing.py
tests/services/contribution/comparison/: test_compare_merge.py  test_compare_path.py  utils.py
tests/services/thing/export/: test_comparison.py
